--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,9 @@ jobs:
             git config --global --add safe.directory /home/ubuntu/onurhanak.com
 
             docker build --no-cache -t onurhanak.com .
-            docker run --name onurhanak.com onurhanak.com
-            docker cp onurhanak.com:/site/public /tmp/public
+            docker run -v ./public:/site/public --name onurhanak.com onurhanak.com
+            rm -rf /tmp/public 
+            cp -r ./public /tmp/public
             docker rm onurhanak.com
 
             sudo rm -rf /var/www/onurhanak.com/*
