--- a/hugo.toml
+++ b/hugo.toml
@@ -27,7 +27,7 @@ author = "Onurhan Ak"
 description = "Onurhan Ak's personal website"
 keywords = "blog,developer,personal"
 info = ["Red Hat Certified System Administrator", "DevOps"]
-avatarURL = "images/pp3.png"
+avatarURL = "images/pp3.webp"
 #gravatar = "john.doe@example.com"
 dateFormat = "January 2, 2006"
 since = 2019
