remove old links

--- a/hugo.toml
+++ b/hugo.toml
@@ -28,7 +28,7 @@ info = [
 author = ""
 license = '<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">CC BY-SA-4.0</a>'
 description = "Onurhan Ak's personal website"
-keywords = "blog,developer,personal"
+keywords = "developer,personal,linux"
 avatarURL = "images/pp3.webp"
 #gravatar = "john.doe@example.com"
 dateFormat = "January 2, 2006"
